--- a/applab-test/style/output/style.css
+++ b/applab-test/style/output/style.css
@@ -1,123 +1,118 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
-body {
-  font-family: "Raleway";
+/* Googlefont Poppins CDN Link */
+@import "https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap";
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+  font-family: "raleway", sans-serif;
 }
 
-nav {
-  position: relative;
+ol,
+ul {
+  padding-left: 0;
+}
+
+.cd__intro {
+  margin-top: 70px;
+}
+
+body {
+  min-height: 100vh;
+}
+
+header {
+  background: url("../../img/bg-header.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 1039px;
+}
+header nav {
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 70px;
-  background: rgba(255, 204, 197, 0.4);
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  height: 100%;
+  height: 90px;
+  background: transparent;
+  box-shadow: 0 1px 2px rgb(145, 140, 140);
   z-index: 99;
 }
-nav .navbar {
+header nav .navbar {
   height: 100%;
-  max-width: 1140px;
+  max-width: 1450px;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin: auto;
-  padding: 0 15px;
+  padding: 0 50px;
 }
-nav .navbar .nav-links {
+header nav .navbar .nav-links {
   line-height: 70px;
   height: 100%;
 }
-nav .navbar .links {
-  display: flex;
-  column-gap: 23px;
+header nav .navbar .nav-links ul {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
-nav .navbar .links li {
+header nav .navbar .links {
+  display: flex;
+}
+header nav .navbar .links li {
   position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
   list-style: none;
-  padding: 0 14px;
+  padding: 0 16px;
 }
-nav .navbar .links li .sub-menu {
-  width: 256px;
-  position: absolute;
-  top: 52px;
-  left: 38px;
-  line-height: 40px;
-  background: rgb(255, 255, 255);
-  box-shadow: 0 4px 33px rgba(0, 0, 0, 0.18);
-  display: none;
-  z-index: 2;
-}
-nav .navbar .links li .sub-menu li {
-  padding: 0 8px 0 14px;
-}
-nav .navbar .links li .sub-menu .arrow {
-  line-height: 40px;
-}
-nav .navbar .links li .sub-menu .deep-sub-menu {
-  width: 256px;
-  position: absolute;
-  top: 52px;
-  left: 38px;
-  line-height: 40px;
-  background: rgb(255, 255, 255);
-  box-shadow: 0 4px 33px rgba(0, 0, 0, 0.18);
-  display: none;
-  z-index: 2;
-  top: 6px;
-  left: 268px;
-}
-nav .navbar .links li a {
+header nav .navbar .links li a {
   height: 100%;
   text-decoration: none;
   white-space: nowrap;
-  color: rgb(90, 90, 90);
-  font-size: 16px;
+  color: #fff;
+  font-size: 18px;
   font-weight: 500;
 }
-nav .navbar .links li:hover .arrow:not(.sub-menu) .arrow {
-  color: rgb(255, 84, 62);
-}
-nav .navbar .links li:hover > .sub-menu {
-  display: block;
-  padding-left: 0;
-}
-nav .navbar .links li:hover a:not(.sub-menu) li a {
-  color: rgb(255, 84, 62);
-}
-nav .navbar .links li .arrow {
+header nav .navbar .links li .arrow {
   height: 100%;
   width: 22px;
   line-height: 70px;
   text-align: center;
   display: inline-block;
-  color: rgb(90, 90, 90);
+  color: #fff;
   transition: all 0.3s ease;
 }
-nav .navbar .links li > .sub-menu li:hover > ul.deep-sub-menu {
-  display: block;
-  padding-left: 0;
+header nav .navbar .links li .sub-menu {
+  position: absolute;
+  top: 70px;
+  left: 0;
+  line-height: 40px;
+  background: #3e8da8;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 0 0 4px 4px;
+  display: none;
+  z-index: 2;
 }
-
-header .stickyNav {
-  position: fixed;
-  top: 0;
+header nav .navbar .links li:hover .htmlCss-sub-menu {
+  display: block;
+}
+header nav .navbar .links li:hover .js-sub-menu {
+  display: block;
 }
 
 .navbar .logo a {
-  font-size: 24px;
-  color: rgb(90, 90, 90);
+  font-size: 30px;
+  color: #fff;
   text-decoration: none;
-  font-weight: 500;
+  font-weight: 600;
 }
 .navbar .links li .sub-menu li {
+  padding: 0 22px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 .navbar .links li .sub-menu a {
-  color: rgb(90, 90, 90);
+  color: #fff;
   font-size: 15px;
   font-weight: 500;
 }
@@ -127,29 +122,50 @@ header .stickyNav {
 .navbar .links li .sub-menu .more-sub-menu {
   position: absolute;
   top: 0;
-  left: 268px;
+  left: 100%;
   border-radius: 0 4px 4px 4px;
   z-index: 1;
   display: none;
-  padding-left: 0;
 }
-.navbar .links .try-btn-mobile {
-  display: none;
+.navbar .search-box {
+  position: relative;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
 }
-.navbar .try-btn a {
-  font-size: 18px;
-  font-weight: 500;
-  text-decoration: none;
-  background-color: rgb(36, 37, 41);
-  padding: 10.5px 14px;
-  color: rgb(255, 255, 255);
+.navbar .search-box i {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  line-height: 40px;
+  text-align: center;
+  font-size: 22px;
+  color: #fff;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.navbar .search-box .input-box {
+  position: absolute;
+  right: calc(100% - 40px);
+  top: 80px;
+  height: 60px;
+  width: 300px;
+  background: #3e8da8;
   border-radius: 6px;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.4s ease;
 }
 .navbar .nav-links .sidebar-logo {
   display: none;
 }
 .navbar .bx-menu {
   display: none;
+}
+.navbar .endIcons .clipboard {
+  padding-left: 36px;
 }
 
 .links li:hover .htmlcss-arrow {
@@ -162,82 +178,63 @@ header .stickyNav {
   display: block;
 }
 
-.nav .navbar .links li > ul.sub-menu > li:hover a {
-  color: rgb(255, 84, 62);
+.navbar.showInput .search-box .input-box {
+  top: 65px;
+  opacity: 1;
+  pointer-events: auto;
+  background: #3e8da8;
 }
 
-@media (max-width: 1100px) {
-  nav .navbar .links {
-    display: block;
-    margin-top: 20px;
+.search-box .input-box::before {
+  content: "";
+  position: absolute;
+  height: 20px;
+  width: 20px;
+  background: #3e8da8;
+  right: 10px;
+  top: -6px;
+  transform: rotate(45deg);
+}
+.search-box .input-box input {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border-radius: 4px;
+  transform: translate(-50%, -50%);
+  height: 35px;
+  width: 280px;
+  outline: none;
+  padding: 0 15px;
+  font-size: 16px;
+  border: none;
+}
+
+@media (max-width: 920px) {
+  nav .navbar {
+    max-width: 100%;
+    padding: 0 25px;
+  }
+  nav .navbar .logo a {
+    font-size: 27px;
   }
   nav .navbar .links li {
-    display: block;
+    padding: 0 10px;
+    white-space: nowrap;
   }
-  nav .navbar .links li:hover > .sub-menu {
-    display: none;
+  nav .navbar .links li a {
+    font-size: 15px;
   }
-  nav .navbar .links li:hover .htmlCss-sub-menu {
-    display: none;
-  }
-  nav .navbar .links li:hover .js-sub-menu {
-    display: none;
-  }
-  nav .navbar .links li > .sub-menu li:hover > ul.deep-sub-menu {
-    display: none;
-  }
-  nav .navbar .links li > .show1 {
-    display: block !important;
-  }
-  nav .navbar .links li .arrow {
-    line-height: 40px;
-  }
-  nav .navbar .links li .sub-menu {
-    position: relative;
-    top: 0;
-    left: 0;
-    box-shadow: none;
-    display: none;
-  }
-  nav .navbar .links li .sub-menu .deep-sub-menu {
-    position: relative;
-    top: 0;
-    left: 0;
-    box-shadow: none;
-    display: none;
-  }
-  nav .navbar .links li .sub-menu li {
-    border-bottom: none;
-  }
-  nav .navbar .nav-links {
-    position: fixed;
-    top: 0;
-    left: -100%;
-    display: block;
-    max-width: 360px;
-    width: 100%;
-    background: rgb(255, 255, 255);
-    line-height: 40px;
-    padding: 20px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-    transition: all 0.5s ease;
-    z-index: 1000;
-  }
-  .try-btn {
-    display: none;
-  }
+}
+@media (max-width: 1100px) {
   .navbar .bx-menu {
     display: block;
     font-size: 25px;
-    color: rgb(36, 37, 41);
+    color: #fff;
   }
   .navbar .nav-links .sidebar-logo {
     display: flex;
     align-items: center;
     justify-content: space-between;
-  }
-  .navbar .links li {
-    display: block;
   }
   .navbar .links li .sub-menu .more-sub-menu {
     display: none;
@@ -254,40 +251,70 @@ header .stickyNav {
     display: flex;
     align-items: center;
   }
-  .navbar .links .try-btn-mobile {
-    display: block;
-  }
   .navbar .nav-links.show1 .links .htmlCss-sub-menu {
     display: block;
-    max-width: 200px;
   }
   .navbar .nav-links.show1 .links .htmlcss-arrow {
     transform: rotate(180deg);
   }
   .navbar .nav-links.show3 .links .js-sub-menu {
     display: block;
-    max-width: 200px;
   }
   .navbar .nav-links.show3 .links .js-arrow {
     transform: rotate(180deg);
   }
   .navbar .nav-links.show2 .links .more .more-sub-menu {
     display: block;
-    max-width: 200px;
   }
   .navbar .nav-links.show2 .links .more-arrow {
     transform: rotate(90deg);
   }
+  nav .navbar .nav-links {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    display: block;
+    max-width: 270px;
+    width: 100%;
+    background: #3e8da8;
+    line-height: 40px;
+    padding: 20px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    transition: all 0.5s ease;
+    z-index: 1000;
+  }
+  nav .navbar .links {
+    display: block;
+    margin-top: 20px;
+  }
+  nav .navbar .links li {
+    display: block;
+  }
+  nav .navbar .links li .arrow {
+    line-height: 40px;
+  }
+  nav .navbar .links li .sub-menu {
+    position: relative;
+    top: 0;
+    box-shadow: none;
+    display: none;
+  }
+  nav .navbar .links li .sub-menu li {
+    border-bottom: none;
+  }
+  nav .navbar .links li:hover .htmlCss-sub-menu {
+    display: none;
+  }
+  nav .navbar .links li:hover .js-sub-menu {
+    display: none;
+  }
   .sidebar-logo .logo-name {
     font-size: 25px;
-    color: rgb(36, 37, 41);
+    color: #fff;
   }
   .sidebar-logo i {
     font-size: 25px;
-    color: rgb(36, 37, 41);
-  }
-  .links li {
-    display: block;
+    color: #fff;
   }
   .links li:hover .htmlcss-arrow {
     transform: rotate(0deg);
@@ -297,6 +324,16 @@ header .stickyNav {
   }
   .links li .sub-menu .more:hover .more-sub-menu {
     display: none;
+  }
+}
+@media (max-width: 1400px) {
+  header nav .navbar .links li {
+    padding: 0 10px;
+  }
+}
+@media (max-width: 370px) {
+  nav .navbar .nav-links {
+    max-width: 100%;
   }
 }
 
